# cloud

./: CMakeLists.txt  README.md
libs/tinyobjloader/models/: cornell_box_VI.mtl
src/: CMakeLists.txt  CfgReader.hpp  cfgfile.json  main.cpp
src/Camera/: CMakeLists.txt  environment.cpp  environment.hpp  perspective.cpp  perspective.hpp
src/Image/: CMakeLists.txt  ImageEXR.cpp  ImageEXR.hpp  ImageJPG.cpp  ImageJPG.hpp  ImagePFM.cpp  ImagePFM.hpp  ImagePPM.cpp  ImagePPM.hpp  image.hpp
src/Images/: imagem.ppm
src/Light/: AmbientLight.hpp  AreaLight.hpp  light.hpp
src/Primitive/: BB.hpp  CMakeLists.txt
src/Primitive/BRDF/: Phong.cpp  Phong.hpp
src/Primitive/Geometry/: geometry.hpp  mesh.cpp  mesh.hpp  triangle.hpp
src/Rays/: intersection.hpp  ray.hpp
src/Renderer/: CMakeLists.txt  StandardRenderer.cpp  renderer.hpp
src/Scene/: CMakeLists.txt  loader_example.cc  scene.cpp  scene.hpp
src/Shader/: AmbientShader.cpp  AmbientShader.hpp  CMakeLists.txt  DistributedShader.cpp  DistributedShader.hpp  PathTracerShader.cpp  PathTracerShader.hpp  WhittedShader.cpp  WhittedShader.hpp  shader.hpp
src/utils/: CMakeLists.txt  RGB.hpp  vector.hpp
